# publish_hoogle

./: .gitignore  README.md  flake.nix  publish-hoogle.cabal
.github/workflows/: publish_github.yaml
docs/: CHANGELOG.md  doc-index.html  publish-hoogle.haddock
publish-hoogle/: MyLib.html
