cabal-version:      3.0
name:               publish-hoogle
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Seungheon Oh
maintainer:         seungheon.ooh@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable publish-hoogle
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base
                 , publish-hoogle

    hs-source-dirs:   app
    default-language: Haskell2010
